Possible faves fix

--- a/Pipfile
+++ b/Pipfile
@@ -21,5 +21,4 @@ mako = "==1.2.4"
 markupsafe = "==2.1.2"
 python-dateutil = "==2.8.2"
 python-dotenv = "==0.21.0"
-python-editor
-
+python-editor = "*"
